style alignment issue fixed.

--- a/Src-client/files/desktop/common/css/styles.css
+++ b/Src-client/files/desktop/common/css/styles.css
@@ -677,7 +677,7 @@ textarea.input-box{
 	width: 35%;
 	margin-right: 5%;
 	float: left;
-	padding-top: 0.6em;
+	padding-top: 1em;
 }
 .single-column-field-input-label {
 	width: 50%;
